brat/test/golden/error/empty_into.brat
makeInt() -> Int
makeInt = { => 42 }

intoErr :: Bool
intoErr = |> makeInt
